--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
 <main>
     <h1>Secretlint🔑🛡️</h1>
-    <p>Secretlint is that Pluggable linting tool to prevent committing credential.</p>
+    <p>Secretlint is a pluggable linting tool to prevent committing credentials.</p>
     <p>You can get secretlint from <a title="secretlint/secretlint: Pluggable linting tool to prevent committing credential." href="https://github.com/secretlint/secretlint">secretlint/secretlint</a></p>
     <div id="app">
         <h2>Secretlint Demo</h2>
