--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <p>You can get secretlint from <a title="secretlint/secretlint: Pluggable linting tool to prevent committing credential." href="https://github.com/secretlint/secretlint">secretlint/secretlint</a></p>
     <div id="app">
         <h2>Secretlint Demo</h2>
-        <p>🛡Safe: This demo does not send your input to server. Secretlint just work on your browser.</p>
+        <p>🛡Safe: This demo does not send your input to server &mdash; it just works in your browser.</p>
         <div id="editor"></div>
     </div>
 </main>
